src/test/ui/consts/const-eval/issue-65394.stderr
error[E0017]: references in constants may only refer to immutable values
  --> $DIR/issue-65394.rs:8:13
   |
LL |     let r = &mut x;
   |             ^^^^^^ constants require immutable values

error[E0493]: destructors cannot be evaluated at compile-time
  --> $DIR/issue-65394.rs:7:9
   |
LL |     let mut x = Vec::<i32>::new();
   |         ^^^^^ constants cannot evaluate destructors

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0017, E0493.
For more information about an error, try `rustc --explain E0017`.
